@startuml
'https://plantuml.com/class-diagram
!theme spacelab

interface ModbusInterface{}
class ModbusBuilderClient{}
class ModbusTCPClientBuilder{}
class BlaubergMVHR{}
class ModbusPYClient{}
class ModbusTCPClient{}
note bottom
 Registered into ModbusTCPClientBuilder
end note
class ModbusRTUClient{}
class ModbusConnectionManager
note bottom
 Decorates Modbus TCP and RTU Connection Responses
end note
protocol Pymodbus{}

BlaubergMVHR  --  ModbusTCPClientBuilder: creates the ModbusInterface using
BlaubergMVHR  --  ModbusInterface: interacts with modbus using
ModbusTCPClientBuilder -- ModbusBuilderClient : builds the registered TCP client
ModbusPYClient -- ModbusTCPClient
ModbusPYClient -- ModbusRTUClient
ModbusPYClient -- Pymodbus: uses this library
ModbusPYClient -- ModbusConnectionManager



ModbusBuilderClient -- ModbusInterface: implements
ModbusBuilderClient --> ModbusPYClient

@enduml